<resources>
    <string name="app_name">CEB-Care-App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="forgot_password"><u>Forgot Password?</u></string>
    <string name="menu_complaints">Complaints</string>
    <string name="menu_outage">Outage Map</string>
    <string name="menu_interruption">Interruption Calender</string>
    <string name="menu_bill_payment">Bill Payment</string>
    <string name="menu_bill_calender">Bill Calculator</string>
    <string name="menu_assess">Access by Census</string>
    <string name="menu_account">Electricity Account</string>
    <string name="menu_profile">My Profile</string>
    <string name="menu_about">About</string>
    <string name="menu_logout">Logout</string>

</resources>
